--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,10 +24,21 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
+
+/* CUSTOM STYLES TAILWIND */
+
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+  .text-justify-right {
+    text-align: justify; 
+    text-align-last: right;
+  }
+  .text-justify-left {
+    text-align: justify; 
+    text-align-last: left;
   }
 }
